@@ -17,9 +17,10 @@ version ? (????-??-??):
     after domain filter was used (alec)
   - added Actions tab in Customer Info with cutoff suspending and warning 
     messages management as separate actions (alec)
-  - Balance Sheet: fixed memory usage problem and increased speed of 
+  - Balance Sheet: fixed big memory usage problem and increased speed of 
     groups filtering (alec)
-  - Invoices List: increased speed of groups and value filtering (alec)
+  - Invoices List: fixed big memory usage problem, increased speed of 
+    groups and value filtering (alec)
 
 version 1.11.3 Quetesh (2008-03-26):
 
